# nero

./: .gitignore  LICENSE  README.md  pyproject.toml
.kiro/hooks/: python-quality-check.kiro.hook
.kiro/specs/nero-research-tool/: requirements.md  tasks.md
.kiro/specs/niro/: design.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
nero/: __init__.py
nero/analysis/: __init__.py
nero/cli/: commands.py  main.py
nero/data/: __init__.py  datasets.py
nero/domain/: __init__.py  interfaces.py  models.py  neural_models.py
nero/logging/: __init__.py  experiment_logger.py
nero/optimizers/: __init__.py  gradient_optimizer.py
nero/orchestration/: __init__.py  experiment_manager.py  seed_manager.py  vram_manager.py
tests/: __init__.py  test_cifar10_dataset.py  test_domain_interfaces.py  test_domain_models.py  test_integration_vertical_slice.py  test_mnist_dataset.py  test_mnist_dataset_basic.py  test_mnist_integration.py  test_neural_models.py  test_seed_manager.py  test_seed_manager_integration.py  test_vram_manager_unit.py
