[project]
name = "nero"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["pandas>=2.3.2", "torch>=2.8.0", "torchvision>=0.23.0"]

[project.scripts]
nero = "nero.cli.main:main"

[dependency-groups]
dev = [
  "pyright>=1.1.405",
  "pytest>=8.4.2",
  "pytest-cov>=7.0.0",
  "ruff>=0.13.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
addopts = "-ra -q --cov=nero"
filterwarnings = [
  "ignore::DeprecationWarning:multiprocessing.popen_fork",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM", "N", "PT"]
